# readertui

./: .gitignore  Cargo.toml  README.md  config.example.toml  makefile
.github/workflows/: readertui-release.yml
man/: readertui.1
src/: config.rs  debug.rs  main.rs  progress.rs
src/app/: mod.rs  state.rs
src/db/: mod.rs  schema.sql
src/models/: chapter.rs  mod.rs  novel.rs
src/text/: mod.rs
src/ui/: home.rs
