[package]
name = "readertui"
version = "1.0.1"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
regex = "1"
tokio = { version = "1.44.2", features = ["full"] }
bitflags = "2.9.0"
simplelog = "0.12.2"
log = "0.4.27"
once_cell = "1.21.3"
html-escape = "0.2.13"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
serde_json = "1.0"
unicode-normalization = "0.1.20"
